--- a/pages/order/cart/cart.wxss
+++ b/pages/order/cart/cart.wxss
@@ -69,7 +69,7 @@ Page {
 .input {
   width: calc(100% - 139rpx);
   height: 100%;
-  line-height:84rpx;
+  line-height: 84rpx;
   text-align: right;
 }
 
@@ -162,8 +162,7 @@ Page {
   height: 80rpx;
 }
 
-.price_item_label {
-}
+.price_item_label {}
 
 .price_item_input {
   flex: 1 0 0;
